# SciKitPlusPlus

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  shell.nix
.github/workflows/: build-test.yml
benchs/: CMakeLists.txt  main.cc
notebooks/: decision_tree.ipynb  kmeans.ipynb  knn.ipynb  linear_regression.ipynb  logistic_regression.ipynb  mnist-without-cnn-and-softmax.ipynb  random_forest.ipynb  requirements.txt  utils.py
sk-plusplus/: CMakeLists.txt  sk-plusplus.hh
sk-plusplus/sk-plusplus/: CMakeLists.txt  sk-plusplus.cc  sk-plusplus.hh
sk-plusplus/sk-plusplus/cluster/: CMakeLists.txt  cluster.hh  kmeans.cc  kmeans.hh
sk-plusplus/sk-plusplus/nn/: CMakeLists.txt  linear.cc  linear.hh  logistic_regression.cc  logistic_regression.hh  module.hh  nn.hh  sequential.cc  sequential.hh
sk-plusplus/sk-plusplus/nn/function/: CMakeLists.txt  exp.cc  exp.hh  function.hh  relu.cc  relu.hh  sigmoid.cc  sigmoid.hh
sk-plusplus/sk-plusplus/nn/loss/: CMakeLists.txt  loss.hh  mse_loss.cc  mse_loss.hh
sk-plusplus/sk-plusplus/scaler/: CMakeLists.txt  min_max_scaler.cc  scaler.hh  standard_scaler.cc
sk-plusplus/sk-plusplus/serializer/: CMakeLists.txt  serializer.hh  tensor_serializer.cc  tensor_serializer.hh
sk-plusplus/sk-plusplus/tensor/: CMakeLists.txt  tensor.cc  tensor.hh  tensor_add.cc  tensor_argmax.cc  tensor_argmin.cc  tensor_div.cc  tensor_max.cc  tensor_mean.cc  tensor_min.cc  tensor_mul.cc  tensor_print.cc  tensor_split.cc  tensor_sqrt.cc  tensor_std.cc  tensor_sub.cc  tensor_sum.cc  tensor_var.cc
tests/: CMakeLists.txt  dummy_test.cc  kmeans_test.cc  logistic_regression_test.cc  min_max_scaler_test.cc  mnist_test.cc  mse_loss_test.cc  standard_scaler_test.cc  tensor_add_test.cc  tensor_div_test.cc  tensor_max_test.cc  tensor_mean_test.cc  tensor_min_test.cc  tensor_mul_test.cc  tensor_serializer_test.cc  tensor_split_test.cc  tensor_sub_test.cc  tensor_sum_test.cc  tensor_test.cc  tensor_var_test.cc
